# co

./: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: azure-container-webapp.yml  conf.yml  deployment.yml  main_curatech.yml  testing.yml
alembic/: env.py
alembic/versions/: 140a6466aea5_create_users_table.py  b19600d85fa0_create_users.py  cac274c8acd8_create_role_table.py  f19905b2efc7_create_users_and_roles_table.py
app/: initial_data.py  initial_data_test.py  main.py
app/api_v1/: api.py
app/api_v1/routers/: auth.py  role.py  user.py
app/config/: database.py  models.py  oauth2.py  schemas.py  utils.py
app/repository/: auth.py  role.py  user.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: initial_data.py  main.py
backend/app/alembic/versions/: 91979b40eb38_create_users_table.py
backend/app/api/api_v1/routers/: auth.py  users.py
backend/app/api/api_v1/routers/tests/: test_auth.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: crud.py  models.py  schemas.py
docker/: Dockerfile.dev
scripts/: build.sh  production_build.sh  startup.sh  test.sh
tests/: conftest.py  database.py  test_user.py
