[tool.poetry]
name = "cura"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
email-validator = "^1.1.3"
passlib = "^1.7.4"
jose = "^1.0.0"
python-jose = "^3.3.0"
alembic = "^1.7.6"
python-multipart = "^0.0.5"
requests = "^2.27.1"



[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
